--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,13 +10,13 @@
     --card-foreground: 212 100% 10%;
     --popover: 0 0% 100%;
     --popover-foreground: 212 100% 10%;
-    --primary: 212 100% 18%;
+    --primary: 212 24% 10%;
     --primary-foreground: 0 0% 100%;
     --secondary: 207 79% 46%;
     --secondary-foreground: 0 0% 100%;
     --muted: 220 13% 91%;
     --muted-foreground: 220 9% 45%;
-    --accent: 26 100% 50%;
+    --accent: 19, 93%, 50%;
     --accent-foreground: 0 0% 100%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
