--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
   }
 
   body {
-    @apply bg-[hsl(var(--background))] text-[hsl(var(--foreground))] font-body;
+    @apply bg-[hsl(var(--background))] text-[hsl(var(--foreground))] font-headline;
   }
 
   h1,
@@ -27,7 +27,8 @@
   h3,
   h4,
   h5,
-  h6 {
+  h6,
+  p {
     @apply font-headline;
   }
 }
